--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"activationEvents": [
 		"workspaceContains:**/pom.xml",
 		"workspaceContains:**/build.xml",
-		"workspaceContains:**/build.gradle"
+		"workspaceContains:**/build.gradle",
+		"workspaceContains:**/WORKSPACE"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
